--- a/public/style.css
+++ b/public/style.css
@@ -9,3 +9,14 @@
 nav{
     margin-bottom: 50px !important;
 }
+
+body{ min-height:100vh; margin:0; position:relative; }
+
+
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+}
