wireframe iteration 1, cards

--- a/public/style.css
+++ b/public/style.css
@@ -52,3 +52,12 @@ svg:hover{
   text-align: center;
 }
 
+.project-links{
+  display: flex;
+  flex-direction: column;
+}
+
+.project-link-item{
+  margin-top: 20px !important;
+}
+
