Mongoose half implem.. DB View & MVC  complete.

--- a/public/css/dbStyle.css
+++ b/public/css/dbStyle.css
@@ -59,10 +59,10 @@ li.table-name-input{
     /* width:10vw; */
 }
 
-input.table-name-input{
+/* input.table-name-input{
     color:white !important;
 
-}
+} */
 
 #sidenav{
     padding: 0px;
