MVC refactor, UI update

--- a/public/css/dbStyle.css
+++ b/public/css/dbStyle.css
@@ -1,9 +1,13 @@
-
+p, h4{
+    color: #fff;
+  }
+  
 body{ 
     min-height:100vh; 
     margin:0; 
     position:relative;
     overflow: hidden;
+    background-color: #39464e;
   }
   
 .top-nav{
@@ -12,6 +16,9 @@ body{
     justify-content:center;
 }
 
+h4{
+    text-align: center;
+}
 
 
 nav{
@@ -46,21 +53,13 @@ li:hover{
 #main{
     height: 100vh;
     border: 1px solid black;
-    background-color: grey;
+    background-color: #39464e;
     /* margin-left: 10vw !important; */
     padding-left: 0px;
     
 
 }
 
-li.table-name-input{
-    /* width:10vw; */
-}
-
-/* input.table-name-input{
-    color:white !important;
-
-} */
 
 #sidenav{
     padding: 0px;
@@ -78,7 +77,7 @@ nav.blue-grey{
 }
 
 
-nav.blue-grey.bottom-nav{
+nav.dark-grey.bottom-nav{
     position: fixed;
     bottom:0px;
     left: 8.4%;
@@ -87,3 +86,78 @@ nav.blue-grey.bottom-nav{
 select{
     display: inline !important;
 }
+
+.card-panel{
+    background-color: #39464e !important;
+}
+
+.input-field>label{
+
+    color: #fff !important;
+
+}
+
+input, select, option, th{
+    color: #fff !important;
+    
+}
+
+select, input{
+    padding: 0px 1vw 0px 1vw !important;
+}
+
+select, option{
+    border: 0 !important;
+    border-bottom: 1px solid #fff !important;
+}
+
+input.table-name-input{
+    border-bottom: 0px !important;
+    margin:0px 0px 0px 0px !important;
+    padding-left:5px !important;
+    /* box-sizing: border-box !important; */
+    /* height:100% !important; */
+
+}
+
+
+
+input.table-name-input:hover{
+    background-color: #39464e !important;
+}
+
+
+li.dark-grey:hover{
+    background-color: #39464e !important;
+
+}
+
+i.icon-white {
+    color: #fff;
+}
+
+.dark-grey{
+    background-color: #3e4146 !important;
+}
+
+select{
+    background-color: #39464e !important;
+
+}
+
+.btn-link{
+    background-color: #98c1d9 !important;
+    color: #39464e !important;
+
+}
+input#id{
+    color: #39464e !important;
+ 
+ }
+
+ 
+  
+
+ .valign-wrapper{
+     margin-bottom: 0 !important;
+ }
